--- a/PCA_diabetes.ipynb
+++ b/PCA_diabetes.ipynb
@@ -22,7 +22,7 @@
    "outputs": [],
    "source": [
     "#Imoprt data from the csv file\n",
-    "data = pd.read_csv('diabetes.csv')"
+    "data = pd.read_csv('diabetes_dataset.csv')"
    ]
   },
   {
